src/Sdl3Sharp.ImGui/Native/ImGui.cs


    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_VSliderIntEx")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool VSliderIntEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, ImVec2 size, int* v, int v_min, int v_max, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, ImGuiSliderFlags flags);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_VSliderScalarEx")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool VSliderScalarEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, ImVec2 size, ImGuiDataType data_type, nint p_data, nint p_min, nint p_max, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, ImGuiSliderFlags flags);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_InputTextEx")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool InputTextEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, nint buf, nuint buf_size, ImGuiInputTextFlags flags, ImGuiInputTextCallback callback, nint user_data);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_InputTextMultilineEx")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool InputTextMultilineEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, nint buf, nuint buf_size, ImVec2 size, ImGuiInputTextFlags flags, ImGuiInputTextCallback callback, nint user_data);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_InputTextWithHintEx")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool InputTextWithHintEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, [MarshalAs(UnmanagedType.LPUTF8Str)] string hint, nint buf, nuint buf_size, ImGuiInputTextFlags flags, ImGuiInputTextCallback callback, nint user_data);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_InputFloatEx")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool InputFloatEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, float* v, float step, float step_fast, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, ImGuiInputTextFlags flags);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_InputFloat2Ex")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool InputFloat2Ex([MarshalAs(UnmanagedType.LPUTF8Str)] string label, float v, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, ImGuiInputTextFlags flags);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_InputFloat3Ex")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool InputFloat3Ex([MarshalAs(UnmanagedType.LPUTF8Str)] string label, float v, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, ImGuiInputTextFlags flags);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_InputFloat4Ex")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool InputFloat4Ex([MarshalAs(UnmanagedType.LPUTF8Str)] string label, float v, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, ImGuiInputTextFlags flags);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_InputIntEx")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool InputIntEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, int* v, int step, int step_fast, ImGuiInputTextFlags flags);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_InputInt2")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool InputInt2([MarshalAs(UnmanagedType.LPUTF8Str)] string label, int v, ImGuiInputTextFlags flags);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_InputInt3")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool InputInt3([MarshalAs(UnmanagedType.LPUTF8Str)] string label, int v, ImGuiInputTextFlags flags);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_InputInt4")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool InputInt4([MarshalAs(UnmanagedType.LPUTF8Str)] string label, int v, ImGuiInputTextFlags flags);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_InputDoubleEx")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool InputDoubleEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, double* v, double step, double step_fast, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, ImGuiInputTextFlags flags);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_InputScalarEx")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool InputScalarEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, ImGuiDataType data_type, nint p_data, nint p_step, nint p_step_fast, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, ImGuiInputTextFlags flags);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_InputScalarNEx")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool InputScalarNEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, ImGuiDataType data_type, nint p_data, int components, nint p_step, nint p_step_fast, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, ImGuiInputTextFlags flags);

    /// <summary>
    /// Widgets: Color Editor/Picker (tip: the ColorEdit* functions have a little color square that can be left-clicked to open a picker, and right-clicked to open an option menu.)
    /// - Note that in C++ a 'float v[X]' function argument is the _same_ as 'float* v', the array syntax is just a way to document the number of elements that are expected to be accessible.
    /// - You can pass the address of a first float element out of a contiguous structure, e.g. &amp;myvector.x
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_ColorEdit3")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool ColorEdit3([MarshalAs(UnmanagedType.LPUTF8Str)] string label, float col, ImGuiColorEditFlags flags);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_ColorEdit4")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool ColorEdit4([MarshalAs(UnmanagedType.LPUTF8Str)] string label, float col, ImGuiColorEditFlags flags);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_ColorPicker3")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool ColorPicker3([MarshalAs(UnmanagedType.LPUTF8Str)] string label, float col, ImGuiColorEditFlags flags);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_ColorPicker4")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool ColorPicker4([MarshalAs(UnmanagedType.LPUTF8Str)] string label, float col, ImGuiColorEditFlags flags, float* ref_col);

    /// <summary>
    /// display a color square/button, hover for details, return true when pressed.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_ColorButtonEx")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool ColorButtonEx([MarshalAs(UnmanagedType.LPUTF8Str)] string desc_id, ImVec4 col, ImGuiColorEditFlags flags, ImVec2 size);

    /// <summary>
    /// initialize current options (generally on application startup) if you want to select a default format, picker type, etc. User will be able to change many settings, unless you pass the _NoOptions flag to your calls.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_SetColorEditOptions")]
    public static partial void SetColorEditOptions(ImGuiColorEditFlags flags);

    #endregion

    #region Widgets: Trees

    /// <summary>
    /// Widgets: Trees
    /// - TreeNode functions return true when the node is open, in which case you need to also call TreePop() when you are finished displaying the tree node contents.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_TreeNode")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool TreeNode([MarshalAs(UnmanagedType.LPUTF8Str)] string label);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_TreeNodeEx")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool TreeNodeEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, ImGuiTreeNodeFlags flags);

    /// <summary>
    /// ~ Indent()+PushID(). Already called by TreeNode() when returning true, but you can call TreePush/TreePop yourself if desired.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_TreePush")]
    public static partial void TreePush([MarshalAs(UnmanagedType.LPUTF8Str)] string str_id);

    /// <summary>
    /// "
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_TreePushPtr")]
    public static partial void TreePushPtr(nint ptr_id);

    /// <summary>
    /// ~ Unindent()+PopID()
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_TreePop")]
    public static partial void TreePop();

    /// <summary>
    /// horizontal distance preceding label when using TreeNode*() or Bullet() == (g.FontSize + style.FramePadding.x*2) for a regular unframed TreeNode
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_GetTreeNodeToLabelSpacing")]
    public static partial float GetTreeNodeToLabelSpacing();

    /// <summary>
    /// if returning 'true' the header is open. doesn't indent nor push on ID stack. user doesn't have to call TreePop().
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_CollapsingHeader")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool CollapsingHeader([MarshalAs(UnmanagedType.LPUTF8Str)] string label, ImGuiTreeNodeFlags flags);

    /// <summary>
    /// when 'p_visible != NULL': if '*p_visible==true' display an additional small close button on upper right of the header which will set the bool to false when clicked, if '*p_visible==false' don't display the header.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_CollapsingHeaderBoolPtr")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool CollapsingHeaderBoolPtr([MarshalAs(UnmanagedType.LPUTF8Str)] string label, bool* p_visible, ImGuiTreeNodeFlags flags);

    /// <summary>
    /// set next TreeNode/CollapsingHeader open state.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_SetNextItemOpen")]
    public static partial void SetNextItemOpen([MarshalAs(UnmanagedType.U1)] bool is_open, ImGuiCond cond);

    /// <summary>
    /// set id to use for open/close storage (default to same as item id).
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_SetNextItemStorageID")]
    public static partial void SetNextItemStorageID(ImGuiID storage_id);

    /// <summary>
    /// "bool selected" carry the selection state (read-only). Selectable() is clicked is returns true so you can modify your selection state. size.x==0.0: use remaining width, size.x&gt;0.0: specify width. size.y==0.0: use label height, size.y&gt;0.0: specify height
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_SelectableEx")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool SelectableEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, [MarshalAs(UnmanagedType.U1)] bool selected, ImGuiSelectableFlags flags, ImVec2 size);

    /// <summary>
    /// "bool* p_selected" point to the selection state (read-write), as a convenient helper.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_SelectableBoolPtrEx")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool SelectableBoolPtrEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, bool* p_selected, ImGuiSelectableFlags flags, ImVec2 size);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImGui_BeginMultiSelectEx")]
    public static partial ImGuiMultiSelectIO* BeginMultiSelectEx(ImGuiMultiSelectFlags flags, int selection_size, int items_count);
